# cuda-samples

Samples/0_Introduction/simplePrintf/: simplePrintf.cu
arraySum/: CMakeLists.txt
bitmap_loop/: CMakeLists.txt  todo.txt
bitmap_loop/src/: aux.cu  aux.h  bitmap.cu  bitmap.h  fft.cu  fft.h  gl_draw.cu  gl_draw.h  main.cu  polychorme.cu  polychrome.cu  polychrome.h  signal.cu  signal.h
cuda-awgn-signal/: CMakeLists.txt  README.md
cuda-awgn-signal/src/: draw.cpp  draw.h  main.cu  signal.cu  signal.h  utils.cu
movingAverage/: CMakeLists.txt  movingAverage.cu  plot.py  plot2.py
